--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
         </nav>
         <div class="sroller">
-            <marquee>welcome to Netflix India</marquee>
+            <marquee>Welcome to Netflix India - By Nithish</marquee>
         </div>
         <div class="header-content">
             <h1>Unlimited movies, TV shows and more</h1>
